--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.7.1",
     "@strapi/strapi": "4.7.1",
     "better-sqlite3": "8.0.1",
+    "nodemailer": "^6.9.15",
     "pg": "^8.11.3",
     "strapi-plugin-populate-deep": "^2.0.0"
   },
